--- a/Html/index.html
+++ b/Html/index.html
@@ -389,7 +389,7 @@
 
                                 <div class="card swiper-slide">
                                     <div class="image_content"></div>
-                                    <div class="card_content intro">
+                                    <div class="card_content">
                                         <div class="name_and_price">
                                             <h2 class="name">Cupcake</h2>
                                             <h3 class="price">c24.00</h3>
@@ -423,7 +423,7 @@
                                     </div>    
                                 </div>
 
-                                <div class="card swiper-slide">
+                                <!-- <div class="card swiper-slide">
                                     <div class="image_content"></div>
                                     <div class="card_content">
                                         <div class="name_and_price">
@@ -433,9 +433,9 @@
                                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam eos quas impedit sit amet</p>
                                         <button><a href="#">Add to cart <i class="fas fa-shopping-cart"></i></a></button>
                                     </div>    
-                                </div>
+                                </div> -->
 
-                                <div class="card swiper-slide">
+                                <!-- <div class="card swiper-slide">
                                     <div class="image_content"></div>
                                     <div class="card_content">
                                         <div class="name_and_price">
@@ -445,25 +445,55 @@
                                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam eos quas impedit sit amet</p>
                                         <button><a href="#">Add to cart <i class="fas fa-shopping-cart"></i></a></button>
                                     </div>    
-                                </div>                
+                                </div>                 -->
 
                             </div> 
                             <div class="swiper-button-next swiper-navBtn"></div>
                             <div class="swiper-button-prev swiper-navBtn"></div>
                             <div class="swiper-pagination"></div>
-                            <div class="swiper-scrollbar"></div>
+                            <!-- <div class="swiper-scrollbar"></div> -->
                         </div>
 
                     </div>
                 </section>
 
 
-                <section id="menu"> <!-- Use swiper slider -->
+                <section id="menu" class="swiper mySwiper"> <!-- Use swiper slider -->
                     <div class="section_inner menu_inner">
                         <h1><span>Discover</span> <br /> OUR MENU</h1>
 
                         <!-- Include a rating section here instead -->
-                        
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                            Slide 1
+                            </div>
+                            <div class="swiper-slide">
+                            Slide 2
+                            </div>
+                            <div class="swiper-slide">
+                            Slide 3
+                            </div>
+                            <div class="swiper-slide">
+                            Slide 4
+                            </div>
+                            <div class="swiper-slide">
+                            Slide 5
+                            </div>
+                            <div class="swiper-slide">
+                            Slide 6
+                            </div>
+                            <div class="swiper-slide">
+                            Slide 7
+                            </div>
+                            <div class="swiper-slide">
+                            Slide 8
+                            </div>
+                            <div class="swiper-slide">
+                            Slide 9
+                            </div>
+                        </div>
+
+                        <div class="swiper-pagination"></div>
                     </div>
                 </section>
 
