--- a/Html/index.html
+++ b/Html/index.html
@@ -691,7 +691,7 @@
             <section class="container footer_inner">
                 <section class="footer_main">
                         <div class="flour_and_frost">
-                            <h2>Flour&Frost</h2>
+                            <h2>flour&frost</h2>
                             <ul>
                                 <li><a href="#">Blog</a></li>
                                 <li><a href="#about">About</a></li>
