--- a/Html/index.html
+++ b/Html/index.html
@@ -493,6 +493,8 @@
                             </div>
                         </div>
 
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div>
                         <div class="swiper-pagination"></div>
                     </div>
                 </section>
