--- a/Html/docs.html
+++ b/Html/docs.html
@@ -66,3 +66,21 @@ Savory Pastries: Featuring quiches, savory turnovers, and hand pies with savory 
 
 
 
+
+
+
+<!-- Breakpoints -->
+<!-- For desktops -->
+1200px
+
+
+<!-- For laptops -->
+992px
+
+
+<!-- For tablets -->
+768px
+
+
+<!-- For phones -->
+576px
