--- a/Html/index.html
+++ b/Html/index.html
@@ -31,8 +31,8 @@
                             </ul>
                             <div class="hamburger_section">
                                 <button class="hamburger"><i class="fas fa-hamburger"></i></button>
+                                <button class="close_hamburger"><i class="fas fa-times"></i></button>
                                 <div class="hamburger_menu">
-                                    <button><i class="fas fa-times close_hamburger"></i></button>
                                     <ul>
                                         <li><a class="active" href="#">Home</a></li>
                                         <li><a href="#showcase">Showcase</a></li>
